# Automation-cowork

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.bmad-core/: README.md
Atlas os/: README.md  atlas.config.json
Atlas os/playbooks/: 00_bootstrap.md  01_daily_cycle.md  02_weekly_cycle.md  03_prd_to_pr.md  04_bug_to_fix_pr.md  05_release_gate.md  06_automation_cowork_integration.md
Atlas os/prompts/: atlas.daily.morning.md  atlas.system.md  atlas.weekly.plan.md  distribution.system.md  distribution.weekly.gtm.md  monetization.system.future.md  product.bug-triage.md  product.e2e-fix-loop.md  product.pr-review.md  product.system.md
Atlas os/schemas/: report.schema.json  task.schema.json
Atlas os/templates/: decision_request_template.md  github_issue_template.md  pr_template.md
Atlas os/workflows/: atlas-morning-report.yml  ci.yml  playwright.yml
docs/: architecture.md  prd.md
docs/architecture/: api-integrations.md  database-schema.md  error-handling.md  logging-monitoring.md  python-structure.md
docs/prd/: epic-1-foundation.md  epic-2-lead-enrichment.md  epic-3-data-pipelines.md
docs/stories/: README.md
migrations/: env.py  script.py.mako
scripts/: run_automation.py  seed_db.py  setup.py
src/core/: config.py  database.py  (+4 more)
tests/: test_core.py  test_lead_enrichment.py  test_marketing_distribution.py  test_pipelines.py
visualizations/: data-pipeline-etl.mmd  data-pipeline-sequence.mmd  error-handling.mmd  lead-enrichment-flow.mmd  lead-enrichment-sequence.mmd  system-architecture.mmd
(+24 files in other folders)
