[tool.poetry]
name = "automation-cowork"
version = "0.1.0"
description = "Agentic automation workflows replacing n8n"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
apscheduler = "^3.10.4"
openai = "^1.6.1"
loguru = "^0.7.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sendgrid = "^6.11.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
black = "^23.12.1"
ruff = "^0.1.15"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
